kubernetes/apps/base/media/media-robbinsdale/qb-pvt/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent-pvt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent-pvt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: qbittorrent-pvt
    spec:
      containers:
      - name: gluetun
        # renovate: datasource=docker depName=ghcr.io/qdm12/gluetun
        image: ghcr.io/qdm12/gluetun:v3.41.3
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: config-volume
          mountPath: /gluetun
          subPath: gluetun
      - name: gluetun-qb-port-sync
        # renovate: datasource=docker depName=ghcr.io/bjw-s-labs/gluetun-qb-port-sync
        image: ghcr.io/bjw-s-labs/gluetun-qb-port-sync:0.0.4
        volumeMounts:
        - name: qb-port-sync-config
          mountPath: /config
        command: ["/bin/sh"]
        args: ["-c", "echo '* * * * * /app/gluetun-qb-port-sync' > /config/crontab && exec /entrypoint.sh"]
      - name: qbittorrent
        # renovate: datasource=docker depName=lscr.io/linuxserver/qbittorrent
        image: lscr.io/linuxserver/qbittorrent:5.2.3
        ports:
        - name: webui
          containerPort: 8080
          protocol: TCP
        - name: torrenting
          containerPort: 6881
          protocol: TCP
        - name: torrenting-udp
          containerPort: 6881
          protocol: UDP
        volumeMounts:
        - name: config-volume
          mountPath: /config
        - name: downloads-volume
          mountPath: /downloads
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: qbittorrent-pvt-config
      - name: downloads-volume
        persistentVolumeClaim:
          claimName: qbittorrent-downloads
      - name: qb-port-sync-config
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-pvt
spec:
  selector:
    app: qbittorrent-pvt
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: control
    port: 8000
    protocol: TCP
    targetPort: 8000
  type: ClusterIP
