kubernetes/apps/base/media/media-robbinsdale/qb-pvt/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-pvt
  annotations:
    item.homer.rajsingh.info/name: "qBittorrent PVT"
    item.homer.rajsingh.info/subtitle: "Torrent Client"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/qbittorrent.svg"
    item.homer.rajsingh.info/keywords: "torrents, downloads"
    service.homer.rajsingh.info/name: "Media"
    service.homer.rajsingh.info/icon: "fas fa-tv"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private
    namespace: home
    sectionName: ${CLUSTER_DOMAIN_LISTENER}
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ts
    namespace: home
    sectionName: ${CLUSTER_DOMAIN_LISTENER}
  hostnames:
  - qbittorrent-pvt.${CLUSTER_DOMAIN}
  rules:
  - backendRefs:
    - name: qbittorrent-pvt
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
